resolve problem collapse, in progress: question C12

--- a/source/assets/stylesheets/faq.scss
+++ b/source/assets/stylesheets/faq.scss
@@ -1,3 +1,3 @@
 .block  {
-  height: 100vh;
+  height: 100%;
 }
